--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <label>ADDING TASK</label>
       <div id="addtext">
         <input type="text" name="add" placeholder="Your To Do" id="todotext">
-        <input type="submit" value="Add" class="btn">
+        <input type="submit" value="Add" class="btn" id="submit">
       </div>      
     </form>
 <!-- list -->
@@ -32,5 +32,6 @@
         </ul>
   </div>
   <script src="app.js"></script>
+  
 </body>
 </html>
