--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo List</title>
-  <link rel="stylesheet" href="http://unpkg.com/ress/dist/ress.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
   
   <script src="https://kit.fontawesome.com/3c23995a19.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.3.0/font-awesome-animation.min.css">
